# LDPC

./: CMakeLists.txt  CMakeLists_1.txt
LDPC_RS/: CMakeLists.txt
LDPC_RS/include/: Constellation.h  LdpcCode.h  ReedSolomon.h
LDPC_RS/src/: Constellation.cpp  LdpcCode.cpp  ReedSolomon.cpp  main.cpp
src/: main.cpp  main_1.cpp
